--- a/src/index.css
+++ b/src/index.css
@@ -48,3 +48,13 @@
     right: 25px;
     cursor: pointer;
 }
+.fab-danger{
+    border-radius: 100%;
+    bottom: 25px;
+    font-size: 20px;
+    position: fixed;
+    left: 25px;
+    cursor: pointer;
+    width: 50px;
+    height: 50px;
+}
